tests/errors/test_override_default_error.mob
// Default mode: overriding a read-only builtin is an error (this used to
// silently replace print). Expected failure.
func print(x) { return x }
